apps/redmine/redmine-statefulset.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: StatefulSet
metadata:
  name: redmine
  labels:
    app: redmine
spec:
  selector:
    matchLabels:
      app: redmine
  serviceName: "redmine-svc"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - name: redmine
        image: redmine
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: redmine-store
          mountPath: /usr/src/redmine/files
  volumeClaimTemplates:
  - metadata:
      name: redmine-store
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: local-storage
      resources:
        requests:
          storage: 1Gi
